Subject : Group 4 - code updated - some spacing issue fixed

--- a/Group 4/css/style.css
+++ b/Group 4/css/style.css
@@ -124,7 +124,6 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-
 }
 .img-box > .reating {
     position: absolute;
@@ -179,8 +178,6 @@
     margin: auto;
     /* border: 1px solid black; */
     flex-direction: column;
-
-
 }
 .testimonials-container{
 max-width: 700px;
@@ -229,49 +226,43 @@ max-width: 700px;
 }
 .members-container{
     display: flex;
-    overflow: auto;
+    overflow-x: auto;
     padding: 20px 20px 40px 20px;
     overflow-y: hidden;
     /* max-height: 600px; */
-
-
 }
 .individual-member{
     background: #E9F7F8;
-
     min-width: 341.3px;
     height: 345.5px;
-    padding:  70px 40px;
+    padding:  45px 33px;
     border-radius: 0px 150px 150px 150px;
-       margin: 5px 20px 5px 0;
-    
-       position: relative;
+    margin: 5px 20px 5px 0;
+    position: relative;
 }
 .member-info{
 font-size: 20px;
 font-weight: 400;
 line-height: 25px;
-
-
 }
 .member-name{
     font-size: 20px;
     font-weight: 600;
-    padding: 5px 0 0 65px;
+    padding: 5px 0 0 27px;
 }
 .member-prof{
     font-size: 16px;
     font-weight: 400;
-    padding: 5px 0 10px 65px;
+    padding: 5px 0 10px 27px;
 }
 .member-profile{
 position: absolute;
 right: 0px;
 bottom: -40px;
 }
-/* .members-container::-webkit-scrollbar {
+.members-container::-webkit-scrollbar {
     appearance: none;
-} */
+}
 
 
 /* =================================== Testimonials CSS CODE END ================================ */
